# calc

./: CMakeLists.txt  funkcjeTrygonometryczne.cpp  funkcjeTrygonometryczne.h  liczbaOdwrotna.cpp  liczbaOdwrotna.h  liczbaPrzeciwna.cpp  liczbaPrzeciwna.h  logarytmDziesietny.cpp  logarytmDziesietny.h  logarytmNaturalny.cpp  logarytmNaturalny.h  logarytmODowolnejPodstawie.cpp  logarytmODowolnejPodstawie.h  main.cpp  onp.cpp  onp.h  readm.cpp  silnia.cpp  silnia.h
