cmake_minimum_required(VERSION 3.15)
project(Calc)

set(CMAKE_CXX_STANDARD 20)

add_executable(Calc main.cpp liczbaOdwrotna.cpp liczbaOdwrotna.h onp.cpp onp.h liczbaPrzeciwna.cpp liczbaPrzeciwna.h logarytmDziesietny.cpp logarytmDziesietny.h logarytmNaturalny.cpp logarytmNaturalny.h logarytmODowolnejPodstawie.cpp logarytmODowolnejPodstawie.h funkcjeTrygonometryczne.cpp funkcjeTrygonometryczne.h silnia.cpp silnia.h)